resolved problem with word wrap

--- a/app/app.css
+++ b/app/app.css
@@ -26,7 +26,8 @@
 
 .menu {
     width: 25%;
-    word-wrap: break-word;
+    height: 800px;
+    /*word-wrap: break-word;*/
 }
 
 ng-map {
